# WebReconAgent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  webrecon.spec
.claude/: settings.local.json
.github/workflows/: build.yml
scripts/: build.sh
webrecon/: __init__.py  main.py
webrecon/core/: agent.py  config.py  followup.py
webrecon/prompts/: PROMPT.md  recon.py
