[project]
name = "webrecon"
version = "0.1.0"
description = "AI-powered web reconnaissance agent using Claude Code SDK"
requires-python = ">=3.12,<4.0"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "rich>=13.7.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
webrecon = "webrecon.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["webrecon"]

[tool.uv]

[dependency-groups]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pyinstaller>=6.0.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
